--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "@nestjs/cqrs": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/graphql": "^12.0.0",
+    "@nestjs/apollo": "^12.0.0",
+    "@apollo/server": "^4.10.0",
+    "graphql": "^16.8.0",
+    "@nestjs/swagger": "^7.1.0",
+    "swagger-ui-express": "^5.0.0",
     "mysql2": "^3.6.0",
     "typeorm": "^0.3.17",
     "reflect-metadata": "^0.2.0",
