--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,20 +1,8 @@
-version: '3.8' # or any other version you prefer
+version: '3.8'
 
 services:
-  mysql:
-    image: mysql:latest
-    container_name: my_mysql_db
-    environment:
-      MYSQL_ROOT_PASSWORD: mysqlpassword
-      MYSQL_DATABASE: mydadv-course-nestjs-cqrs-demo
-      MYSQL_USER: mysqluser
-      MYSQL_PASSWORD: mysqlpassword
-    ports:
-      - '3306:3306'
-    volumes:
-      - mysql_data:/var/lib/mysql
   postgres:
-    image: postgres:latest
+    image: postgres:16
     container_name: my_postgres_db
     environment:
       POSTGRES_USER: postgres
@@ -24,7 +12,11 @@ services:
       - '5432:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 volumes:
-  mysql_data:
   postgres_data:
