--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
   "dependencies": {
     "@apollo/server": "^4.10.0",
     "@nestjs/apollo": "^12.0.0",
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.4.20",
     "@nestjs/config": "^3.0.0",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^10.4.20",
     "@nestjs/cqrs": "^10.0.0",
     "@nestjs/graphql": "^12.0.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/mongoose": "^11.0.3",
+    "@nestjs/platform-express": "^10.4.20",
     "@nestjs/swagger": "^7.1.0",
     "@nestjs/typeorm": "^10.0.0",
     "graphql": "^16.8.0",
+    "graphql-scalars": "^1.25.0",
+    "mongoose": "^8.20.2",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.0",
     "rimraf": "^3.0.2",
